{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 80,
  "lineage": "f994606d-8fca-40f4-ab09-9c75802b0e67",
  "resources": [
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0532be01f26a3de55",
            "arn": "arn:aws:ec2:us-east-1:884337374668:instance/i-0b8d4d8115cd127f3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b8d4d8115cd127f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08cd5bed74fb1092c",
            "private_dns": "ip-10-0-10-73.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-017f2aa9200940b9b",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5c2e061ba7e8fa9",
            "tags": {
              "Name": "myapp-dev-backend"
            },
            "tags_all": {
              "Name": "myapp-dev-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e9c73039afb5b93c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.backend",
            "module.security_groups.aws_security_group.frontend",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0532be01f26a3de55",
            "arn": "arn:aws:ec2:us-east-1:884337374668:instance/i-07da3668ae37ecd05",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07da3668ae37ecd05",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0815ab6fa55518bde",
            "private_dns": "ip-10-0-0-69.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.69",
            "public_dns": "ec2-44-220-92-93.compute-1.amazonaws.com",
            "public_ip": "44.220.92.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0116f272ccc8dcbe0",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cce9dd1f8d68874f",
            "tags": {
              "Name": "myapp-dev-frontend"
            },
            "tags_all": {
              "Name": "myapp-dev-frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050b262d216398645"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.frontend",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884337374668:security-group/sg-0e9c73039afb5b93c",
            "description": "Security group for backend EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9c73039afb5b93c",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.37.157.40/32"
                ],
                "description": "SSH from your IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "API from frontend",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-050b262d216398645"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "myapp-dev-backend-sg",
            "name_prefix": "",
            "owner_id": "884337374668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-backend-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce602dc757bf8846"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.frontend",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884337374668:security-group/sg-09ef95a4d0481724d",
            "description": "Security group for RDS database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ef95a4d0481724d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from backend",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e9c73039afb5b93c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "myapp-dev-database-sg",
            "name_prefix": "",
            "owner_id": "884337374668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-database-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce602dc757bf8846"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.backend",
            "module.security_groups.aws_security_group.frontend",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884337374668:security-group/sg-050b262d216398645",
            "description": "Security group for frontend EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050b262d216398645",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "49.37.157.40/32"
                ],
                "description": "SSH from your IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "myapp-dev-frontend-sg",
            "name_prefix": "",
            "owner_id": "884337374668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-frontend-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce602dc757bf8846"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b62a8ff680a70e41",
            "arn": "arn:aws:ec2:us-east-1:884337374668:elastic-ip/eipalloc-0b62a8ff680a70e41",
            "domain": "vpc",
            "id": "eipalloc-0b62a8ff680a70e41",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-209-201-177.compute-1.amazonaws.com",
            "public_ip": "44.209.201.177",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884337374668:internet-gateway/igw-09bcaadb3b5455b3f",
            "id": "igw-09bcaadb3b5455b3f",
            "owner_id": "884337374668",
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-igw"
            },
            "vpc_id": "vpc-0ce602dc757bf8846"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b62a8ff680a70e41",
            "association_id": "eipassoc-0981749a1e623b599",
            "connectivity_type": "public",
            "id": "nat-0bab196f3a1e13e0a",
            "network_interface_id": "eni-05e4749cc144d3087",
            "private_ip": "10.0.0.75",
            "public_ip": "44.209.201.177",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cce9dd1f8d68874f",
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884337374668:route-table/rtb-0067dd084093cdd66",
            "id": "rtb-0067dd084093cdd66",
            "owner_id": "884337374668",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bab196f3a1e13e0a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce602dc757bf8846"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884337374668:route-table/rtb-0ea46755941262286",
            "id": "rtb-0ea46755941262286",
            "owner_id": "884337374668",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09bcaadb3b5455b3f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce602dc757bf8846"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0d17d4b547e61dc",
            "route_table_id": "rtb-0067dd084093cdd66",
            "subnet_id": "subnet-0b5c2e061ba7e8fa9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a976cc848ab9c0d",
            "route_table_id": "rtb-0067dd084093cdd66",
            "subnet_id": "subnet-03ca9824f4e001760"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b0ec92648c79f96",
            "route_table_id": "rtb-0ea46755941262286",
            "subnet_id": "subnet-0cce9dd1f8d68874f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce2f657c3bd3b9a0",
            "route_table_id": "rtb-0ea46755941262286",
            "subnet_id": "subnet-0a55ffda6e0a1d877"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884337374668:subnet/subnet-0b5c2e061ba7e8fa9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5c2e061ba7e8fa9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884337374668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-private-subnet-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-0ce602dc757bf8846"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884337374668:subnet/subnet-03ca9824f4e001760",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ca9824f4e001760",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884337374668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-private-subnet-2",
              "Type": "Private"
            },
            "vpc_id": "vpc-0ce602dc757bf8846"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884337374668:subnet/subnet-0cce9dd1f8d68874f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cce9dd1f8d68874f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "884337374668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-public-subnet-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-0ce602dc757bf8846"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884337374668:subnet/subnet-0a55ffda6e0a1d877",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a55ffda6e0a1d877",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "884337374668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-public-subnet-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-0ce602dc757bf8846"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884337374668:vpc/vpc-0ce602dc757bf8846",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b2fe2e3bcd1c186a",
            "default_route_table_id": "rtb-03182ca220fbb06be",
            "default_security_group_id": "sg-0c9592de18e88a357",
            "dhcp_options_id": "dopt-00da981198a0c57c0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce602dc757bf8846",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03182ca220fbb06be",
            "owner_id": "884337374668",
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}